--- a/index.html
+++ b/index.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width" initial-scale="1">
-    <meta name="description" content="Check your Medieval knowledge with this Quiz!">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Check your Medieval knowledge with this Quiz!"
+    />
     <title>Medieval Quiz</title>
     <link href="styles.css" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Pattaya" rel="stylesheet">
-    <script src="index.js"></script>
+    <link
+      href="https://fonts.googleapis.com/css?family=Pattaya"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header role="banner">
       <h1>Medieval Quiz</h1>
       <p class="score-count">Score: 0/10</p>
-      <p class="question-count">Question: <span id="js-question-count">0/10</span></p>
+      <p class="question-count">
+        Question: <span id="js-question-count">0/10</span>
+      </p>
     </header>
     <section class="question-container" role="main">
-        <section class="ready-start" role="article">
-            <p>Test your Medieval knowledge!</p>
-            <button class="start-quiz" type="submit" role="button">Knights are you Ready?</button>
-        </section>
+      <section class="ready-start" role="article">
+        <p>Test your Medieval knowledge!</p>
+        <button class="start-quiz" type="submit" role="button">
+          Knights, are you Ready?
+        </button>
+      </section>
     </section>
+    <script src="index.js" defer></script>
   </body>
 </html>
